# kedropipe

./: .gitignore  .pre-commit-config.yaml  GENERIC_FEATURE_ANALYSIS.md  README_kedro.md  kedro_config.yml  mkdocs.yml  pyproject.toml  run_model_validation.py  test_pdp_plots.py  test_plot_validation.py  view_mlflow_results.py
.viz/: kedro_pipeline_events.json  stats.json
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
conf/base/: catalog.yml  parameters.yml
data/models/: model_metrics.txt  trained_catboost_model.pkl  trained_catboost_model.txt
data/processed/: X_test.parquet  X_train.parquet  feature_columns.txt  model_comparison_results.json  model_predictions.parquet  prepared_model_data.parquet  segmented_metrics.pkl  validation_dataset.parquet  validation_metrics.parquet  y_test.txt  y_train.txt
data/raw/: segmentation_data.parquet
data/reporting/: validation_report_paths.json  validation_summary.txt
notebooks/: create_data.ipynb
notebooks/model_monitoring/: 01_example_KPI.ipynb  01_model_validation.ipynb  02_example_comparison.ipynb  03_example_preconfigured.ipynb  04_example_global.ipynb  05_example_model_analysis.ipynb
notebooks/model_monitoring/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/model_monitoring/catboost_info/learn/: events.out.tfevents
pipeline_viz.json/api/: main  run-status
pipeline_viz.json/api/nodes/: 01c06312  05f89502  072bc607  080f4411  082bffa9  1271d8d5  1f4598f4  20ee0e61  2b07b970  2e831ab7  30f7ff20  3a8a6454  51921802  5e681149  66b64fe7  68b45ccd  69210d56  69ae005c  78823d8a  872981f9  8c812b47  9157662c  9ca016a8  a066a1e5  a2f40565  ba9bb4e2  c07abfbb  c2228351  c57679c2  cae2d1c7  cafe0512  cfe3c808  da72e5fb  e1312146  f6d9538c
src/model_monitoring/: README.md  __init__.py  agg_stats.py  metrics.py  monitoring.py  segmentation.py
src/model_monitoring/global_analyses/: global_class.py
src/model_monitoring/model_analyses/: model_class.py  pdp.py
src/model_monitoring/plotting/: __init__.py  core.py
src/model_monitoring/pre_configured/: base_analysis.py  basic_analysis.py
src/modelcreation/: __init__.py  __main__.py  settings.py
src/modelcreation/pipelines/: __init__.py
src/modelcreation/pipelines/data_preparation/: README.md  nodes.py  pipeline.py
src/modelcreation/pipelines/model_training/: nodes.py  pipeline.py
src/modelcreation/pipelines/model_validation/: GLOBAL_ANALYSIS_README.md  README.md  REFACTORING_SUMMARY.md  __init__.py  analysis_class.py  config.py  mlflow_saver.py  nodes.py  nodes_by_feature.py  nodes_global.py  nodes_pdp.py  pipeline.py  serialization.py
src/modelcreation/pipelines/model_validation/analysis_definition/: __init__.py  global_analysis.py  pdp_analysis.py  segmented_analysis.py
src/predlab/: README.md  bootstrap_ci.py  data_loader.py  monitoring.py  treatments.py
src/predlab/global_analyses/: __init__.py  analyses.py  calibration.py  global_class.py  lorenz.py  prediction.py
src/predlab/model_analyses/: __init__.py  analyses.py  model_class.py
src/predlab/plotting/: __init__.py  core.py  global_plots.py
src/predlab/pre_configured/: __init__.py  base_analysis.py  insurance_analysis.py
